[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cetus-client"
version = "1.0.0"
description = "CLI client for the Cetus threat intelligence alerting API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "SparkIT" }]
keywords = ["security", "threat-intelligence", "dns", "alerting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.25",
    "rich>=13.0",
    "platformdirs>=4.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.30",
    "ruff>=0.1",
    "pyinstaller>=6.0",
    "build>=1.0",
]

[project.scripts]
cetus = "cetus.cli:main"

[project.urls]
Homepage = "https://alerting.sparkits.ca"
Repository = "https://github.com/SparkITSolutions/cetus-client"
Changelog = "https://github.com/SparkITSolutions/cetus-client/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/cetus"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
